
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UBYTE ;


 int GTIA_COLBK ;
 int GTIA_COLPF0 ;
 int GTIA_COLPF1 ;
 int GTIA_COLPF2 ;
 int GTIA_COLPF3 ;
 int GTIA_COLPM0 ;
 int GTIA_COLPM1 ;
 int GTIA_COLPM2 ;
 int GTIA_COLPM3 ;
 int GTIA_GRACTL ;
 int GTIA_GRAFM ;
 int GTIA_GRAFP0 ;
 int GTIA_GRAFP1 ;
 int GTIA_GRAFP2 ;
 int GTIA_GRAFP3 ;
 int GTIA_HPOSM0 ;
 int GTIA_HPOSM1 ;
 int GTIA_HPOSM2 ;
 int GTIA_HPOSM3 ;
 int GTIA_HPOSP0 ;
 int GTIA_HPOSP1 ;
 int GTIA_HPOSP2 ;
 int GTIA_HPOSP3 ;
 int GTIA_M0PL ;
 int GTIA_M1PL ;
 int GTIA_M2PL ;
 int GTIA_M3PL ;
 int GTIA_OFFSET_COLBK ;
 int GTIA_OFFSET_COLPF0 ;
 int GTIA_OFFSET_COLPF1 ;
 int GTIA_OFFSET_COLPF2 ;
 int GTIA_OFFSET_COLPF3 ;
 int GTIA_OFFSET_COLPM0 ;
 int GTIA_OFFSET_COLPM1 ;
 int GTIA_OFFSET_COLPM2 ;
 int GTIA_OFFSET_COLPM3 ;
 int GTIA_OFFSET_GRACTL ;
 int GTIA_OFFSET_GRAFM ;
 int GTIA_OFFSET_GRAFP0 ;
 int GTIA_OFFSET_GRAFP1 ;
 int GTIA_OFFSET_GRAFP2 ;
 int GTIA_OFFSET_GRAFP3 ;
 int GTIA_OFFSET_HPOSM0 ;
 int GTIA_OFFSET_HPOSM1 ;
 int GTIA_OFFSET_HPOSM2 ;
 int GTIA_OFFSET_HPOSM3 ;
 int GTIA_OFFSET_HPOSP0 ;
 int GTIA_OFFSET_HPOSP1 ;
 int GTIA_OFFSET_HPOSP2 ;
 int GTIA_OFFSET_HPOSP3 ;
 int GTIA_OFFSET_PRIOR ;
 int GTIA_OFFSET_SIZEM ;
 int GTIA_OFFSET_SIZEP0 ;
 int GTIA_OFFSET_SIZEP1 ;
 int GTIA_OFFSET_SIZEP2 ;
 int GTIA_OFFSET_SIZEP3 ;
 int GTIA_P0PL ;
 int GTIA_P1PL ;
 int GTIA_P2PL ;
 int GTIA_P3PL ;
 int GTIA_PRIOR ;
 int GTIA_PutByte (int ,int ) ;
 int GTIA_SIZEM ;
 int GTIA_SIZEP0 ;
 int GTIA_SIZEP1 ;
 int GTIA_SIZEP2 ;
 int GTIA_SIZEP3 ;
 int * GTIA_TRIG_latch ;
 int GTIA_VDELAY ;
 int GTIA_speaker ;
 int PF0PM ;
 int PF1PM ;
 int PF2PM ;
 int PF3PM ;
 int StateSav_ReadINT (int*,int) ;
 int StateSav_ReadUBYTE (int *,int) ;
 int consol_mask ;

void GTIA_StateRead(UBYTE version)
{
 int next_console_value;

 StateSav_ReadUBYTE(&GTIA_HPOSP0, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSP1, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSP2, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSP3, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSM0, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSM1, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSM2, 1);
 StateSav_ReadUBYTE(&GTIA_HPOSM3, 1);
 StateSav_ReadUBYTE(&PF0PM, 1);
 StateSav_ReadUBYTE(&PF1PM, 1);
 StateSav_ReadUBYTE(&PF2PM, 1);
 StateSav_ReadUBYTE(&PF3PM, 1);
 StateSav_ReadUBYTE(&GTIA_M0PL, 1);
 StateSav_ReadUBYTE(&GTIA_M1PL, 1);
 StateSav_ReadUBYTE(&GTIA_M2PL, 1);
 StateSav_ReadUBYTE(&GTIA_M3PL, 1);
 StateSav_ReadUBYTE(&GTIA_P0PL, 1);
 StateSav_ReadUBYTE(&GTIA_P1PL, 1);
 StateSav_ReadUBYTE(&GTIA_P2PL, 1);
 StateSav_ReadUBYTE(&GTIA_P3PL, 1);
 StateSav_ReadUBYTE(&GTIA_SIZEP0, 1);
 StateSav_ReadUBYTE(&GTIA_SIZEP1, 1);
 StateSav_ReadUBYTE(&GTIA_SIZEP2, 1);
 StateSav_ReadUBYTE(&GTIA_SIZEP3, 1);
 StateSav_ReadUBYTE(&GTIA_SIZEM, 1);
 StateSav_ReadUBYTE(&GTIA_GRAFP0, 1);
 StateSav_ReadUBYTE(&GTIA_GRAFP1, 1);
 StateSav_ReadUBYTE(&GTIA_GRAFP2, 1);
 StateSav_ReadUBYTE(&GTIA_GRAFP3, 1);
 StateSav_ReadUBYTE(&GTIA_GRAFM, 1);
 StateSav_ReadUBYTE(&GTIA_COLPM0, 1);
 StateSav_ReadUBYTE(&GTIA_COLPM1, 1);
 StateSav_ReadUBYTE(&GTIA_COLPM2, 1);
 StateSav_ReadUBYTE(&GTIA_COLPM3, 1);
 StateSav_ReadUBYTE(&GTIA_COLPF0, 1);
 StateSav_ReadUBYTE(&GTIA_COLPF1, 1);
 StateSav_ReadUBYTE(&GTIA_COLPF2, 1);
 StateSav_ReadUBYTE(&GTIA_COLPF3, 1);
 StateSav_ReadUBYTE(&GTIA_COLBK, 1);
 StateSav_ReadUBYTE(&GTIA_PRIOR, 1);
 StateSav_ReadUBYTE(&GTIA_VDELAY, 1);
 StateSav_ReadUBYTE(&GTIA_GRACTL, 1);

 StateSav_ReadUBYTE(&consol_mask, 1);
 StateSav_ReadINT(&GTIA_speaker, 1);
 StateSav_ReadINT(&next_console_value, 1);
 if (version >= 7)
  StateSav_ReadUBYTE(GTIA_TRIG_latch, 4);

 GTIA_PutByte(GTIA_OFFSET_HPOSP0, GTIA_HPOSP0);
 GTIA_PutByte(GTIA_OFFSET_HPOSP1, GTIA_HPOSP1);
 GTIA_PutByte(GTIA_OFFSET_HPOSP2, GTIA_HPOSP2);
 GTIA_PutByte(GTIA_OFFSET_HPOSP3, GTIA_HPOSP3);
 GTIA_PutByte(GTIA_OFFSET_HPOSM0, GTIA_HPOSM0);
 GTIA_PutByte(GTIA_OFFSET_HPOSM1, GTIA_HPOSM1);
 GTIA_PutByte(GTIA_OFFSET_HPOSM2, GTIA_HPOSM2);
 GTIA_PutByte(GTIA_OFFSET_HPOSM3, GTIA_HPOSM3);
 GTIA_PutByte(GTIA_OFFSET_SIZEP0, GTIA_SIZEP0);
 GTIA_PutByte(GTIA_OFFSET_SIZEP1, GTIA_SIZEP1);
 GTIA_PutByte(GTIA_OFFSET_SIZEP2, GTIA_SIZEP2);
 GTIA_PutByte(GTIA_OFFSET_SIZEP3, GTIA_SIZEP3);
 GTIA_PutByte(GTIA_OFFSET_SIZEM, GTIA_SIZEM);
 GTIA_PutByte(GTIA_OFFSET_GRAFP0, GTIA_GRAFP0);
 GTIA_PutByte(GTIA_OFFSET_GRAFP1, GTIA_GRAFP1);
 GTIA_PutByte(GTIA_OFFSET_GRAFP2, GTIA_GRAFP2);
 GTIA_PutByte(GTIA_OFFSET_GRAFP3, GTIA_GRAFP3);
 GTIA_PutByte(GTIA_OFFSET_GRAFM, GTIA_GRAFM);
 GTIA_PutByte(GTIA_OFFSET_COLPM0, GTIA_COLPM0);
 GTIA_PutByte(GTIA_OFFSET_COLPM1, GTIA_COLPM1);
 GTIA_PutByte(GTIA_OFFSET_COLPM2, GTIA_COLPM2);
 GTIA_PutByte(GTIA_OFFSET_COLPM3, GTIA_COLPM3);
 GTIA_PutByte(GTIA_OFFSET_COLPF0, GTIA_COLPF0);
 GTIA_PutByte(GTIA_OFFSET_COLPF1, GTIA_COLPF1);
 GTIA_PutByte(GTIA_OFFSET_COLPF2, GTIA_COLPF2);
 GTIA_PutByte(GTIA_OFFSET_COLPF3, GTIA_COLPF3);
 GTIA_PutByte(GTIA_OFFSET_COLBK, GTIA_COLBK);
 GTIA_PutByte(GTIA_OFFSET_PRIOR, GTIA_PRIOR);
 GTIA_PutByte(GTIA_OFFSET_GRACTL, GTIA_GRACTL);
}
